--- a/s/sh/sho/shopintimates.com.html
+++ b/s/sh/sho/shopintimates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shopintimates.com privacy policy that was archived on 2007-04-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070421215227id_/http%3A//www.shopintimates.com/page.php%3Fpage%3Dinfo) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shopintimates.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227124730id_/http%3A//www.shopintimates.com/page.php%3Fpage%3Dinfo) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,16 +17,50 @@
 </head>
 
 <body class="commonbg">
+<style type="text/css">
+<!--
+a:link {
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+a:active {
+	text-decoration: none;
+}
+.style2 {
+	font-size: 9px;
+	color: #FFFFCC;
+	font-family: Tahoma;
+	font-weight: bold;
+}
+-->
+</style>
 <center>
-<table width="770" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
- <td colspan="15" class="headerbg" height="72" valign="bottom"><div align="left"><a href="http://www.shopintimates.com/index.php">  </a>
-   <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="780" height="154">
-     <param name="movie" value="http://www.shopintimates.com/home/0101.swf">
-     <param name="quality" value="high">
-     <embed src="http://www.shopintimates.com/home/0101.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="780" height="154">
-   </object>
- </div></td>
+<table width="100%" border="0">
+  <tbody><tr>
+    <td background="images/whmcslogobg2b.png" scope="col"><div align="center">
+      <iframe src="http://shopintimates.com/advertiser//image.php?size_id=2" width="468" height="60" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" vspace="0" hspace="0"><br>
+        <font size=-1></iframe>
+        <img src="images/sm_333_oo.gif" width="9" height="9">
+        <iframe src="http://shopintimates.com/advertiser//image.php?size_id=1" width="234" height="60" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" vspace="0" hspace="0"><br>
+        <font size=-1></iframe>
+    </div></td>
+  </tr>
+</tbody></table>
+<table width="770" border="0" cellspacing="0" cellpadding="0"><tbody><tr>
+ <td colspan="15" class="headerbg" height="72" valign="bottom"><div align="left">
+   <p>
+     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="795" height="154">
+       <param name="movie" value="http://www.shopintimates.com/0101.swf">
+       <param name="quality" value="high">
+       <embed src="http://www.shopintimates.com/0101.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="795" height="154">
+     </object>
+   </p>
+   </div></td>
 
 
 </tr><tr valign="top" class="headerbg">
@@ -47,11 +81,10 @@
 			<td><a target="_parent" href="http://www.shopintimates.com/page.php?page=retail_shop"><img border="0" src="images/silver/menu-showroombanner.gif" width="80" height="80" alt="MENU_SHOWROOM"></a></td>
 			
 		</tr>
-		</tbody></table>
-
-	</td>
+		</tbody></table>	</td>
 </tr>
-</tbody></table><br class="txt5">
+</tbody></table>
+<br class="txt5">
  
 
 <table width="770" border="0" cellspacing="0" cellpadding="0">
@@ -100,7 +133,7 @@
         <p>Please direct any questions or concerns regarding the use or disclosure of Personal Information to us by using the Contact Information given below. We will investigate and attempt to resolve complaints and disputes regarding use and disclosure of personal information in accordance with the principles contained in this Privacy Statement. For complaints that cannot be resolved, we will make available to you an independent dispute resolution process. </p>
         <p class="style1">Contact Information </p>
         <p>In the event of questions about (i) access to your Personal Information, (ii) our collection, use, management, or disclosure of Personal Information, or (iii) this Privacy Statement , contact us at: </p>
-        <p>privacy@shopintimates.com </p>
+        <p>privacy(@)shopintimates.com </p>
         <p><strong></strong></p>
         <p>Privacy Officer : Mabel Chan </p>
         <p>170 Upper Bukit Timah Road, #02-53 Bukit Timah Shopping Centre, Singapore 588179. Singapore ACRA Business Registration No: 53058725D </p>
@@ -111,21 +144,25 @@
   </tr>
 </tbody></table>
 
+<script type="text/javascript"><!--
+google_ad_client = "pub-3273141695437124";
+google_ad_width = 336;
+google_ad_height = 280;
+google_ad_format = "336x280_as";
+google_ad_type = "image";
+//2007-06-08: Shopintimates
+google_ad_channel = "5781895876";
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
 <!-- BEGIN ProvideSupport.com Visitor Monitoring Code -->
-<div id="cioADh" style="z-index:100;position:absolute"></div><div id="sdoADh" style="display:none"><script type="text/javascript" src="https://secure.providesupport.com/image/js/softinteractive/safe-monitor.js?ps_h=oADh&amp;ps_t=1582333547663"></script></div><script type="text/javascript">var seoADh=document.createElement("script");seoADh.type="text/javascript";var seoADhs=(location.protocol.indexOf("https")==0?"https://secure.providesupport.com/image":"http://image.providesupport.com")+"/js/softinteractive/safe-monitor.js?ps_h=oADh\u0026ps_t="+new Date().getTime();setTimeout("seoADh.src=seoADhs;document.getElementById('sdoADh').appendChild(seoADh)",1)</script><noscript><div style="display:inline"><a href="http://www.providesupport.com?monitor=softinteractive"><img src="http://image.providesupport.com/image/softinteractive.gif" border="0"></a></div></noscript>
+<div id="cieFvr" style="z-index:100;position:absolute"></div><div id="sdeFvr" style="display:none"><script type="text/javascript" src="https://secure.providesupport.com/image/js/shopinti/safe-monitor.js?ps_h=eFvr&amp;ps_t=1582333545550"></script></div><script type="text/javascript">var seeFvr=document.createElement("script");seeFvr.type="text/javascript";var seeFvrs=(location.protocol.indexOf("https")==0?"https://secure.providesupport.com/image":"http://image.providesupport.com")+"/js/shopinti/safe-monitor.js?ps_h=eFvr\u0026ps_t="+new Date().getTime();setTimeout("seeFvr.src=seeFvrs;document.getElementById('sdeFvr').appendChild(seeFvr)",1)</script><noscript><div style="display:inline"><a href="http://www.providesupport.com?monitor=shopinti"><img src="http://image.providesupport.com/image/shopinti.gif" border="0"></a></div></noscript>
 <!-- END ProvideSupport.com Visitor Monitoring Code -->
 
 
 
-<script language="JavaScript">
-function click() {
-if (event.button==2) {
-alert('You Cannot Right Click');
-}
-}
-document.onmousedown=click
-// --> 
-</script>
 </td>
 	</tr>
 	</tbody></table>
@@ -158,14 +195,14 @@ function openPopup(pageUrl, width, height)
 <div align="center" class="small">
 
 | <a class="small" href="http://www.shopintimates.com/page.php?page=delivery_payment" onclick="">Delivery &amp; Payment Terms</a>
-| <a class="small" href="http://www.shopintimates.com/page.php?page=faq" onclick="">Lingerie Size Chart</a>
+| <a class="small" href="http://www.shopintimates.com/page.php?page=faq" onclick="">Lingerie Size chart</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=Bank" onclick="">Payment Methods</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=links" onclick="">Toys Care</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=forum" onclick="">Sex &amp; Love</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=info" onclick="">Privacy Policy</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=discreet" onclick="">Discreet Packaging</a>
 | <a class="small" href="http://www.shopintimates.com/page.php?page=retail_shop" onclick="">Retail Showroom</a>
-| <a class="small" href="http://www.shopintimates.com/page.php?page=Advertise" onclick="">Advertise with Us</a> 
+| <a class="small" href="http://www.shopintimates.com/advertiser/index.php" onclick="">Advertise with Us</a> 
 
 |
 
@@ -195,7 +232,9 @@ function openPopup(pageUrl, width, height)
     </div></td>
   </tr>
 </tbody></table>
-<p><img src="images/paypal2.jpg" width="82" height="26"><img src="images/logo_ccVisas.gif" width="37" height="21"><img src="images/logo_ccMCc.gif" width="37" height="21"><img src="images/logo_ccAmex.gif" width="37" height="21"><img src="images/logo_ccDiscover.gif" width="37" height="21"><br>
+<p><img src="images/paymentbanner.jpg" width="630" height="35">
+
+<br>
 </p><div align="center">Copyright © 2004-2007 ShopIntimates Singapore. All rights reserved. Singapore ACRA Business Registration No: 53058725D 
 </div>
 <div align="center">
