--- a/s/se/ser/serverintellect.com.html
+++ b/s/se/ser/serverintellect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the serverintellect.com privacy policy that was archived on 2007-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070622124901id_/http%3A//www.serverintellect.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the serverintellect.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227160054id_/http%3A//www.serverintellect.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Server Intellect Privacy Policy</title>
@@ -10,8 +10,8 @@
 <noscript><style type="text/css">.qmmc {width:200px !important;height:200px !important;overflow:scroll;}.qmmc div {position:relative !important;visibility:visible !important;}.qmmc a {float:none !important;white-space:normal !important;}</style></noscript>
 </head>
 <body>
-<form name="form1" method="post" action="/privacy.aspx" id="form1">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEyNzM5NDMzNzlkZBpIf/jCC3g4GFbYn9MN+Jax3s+2">
+<form name="form1" method="post" action="privacy.aspx" id="form1">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEyNzM5NDMzNzlkZIXykV3Y7OgW3qevvk51O+9p+1tA">
 
 
 <table width="950" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -34,7 +34,9 @@
 <td width="700" bgcolor="#3399ff"><table width="698" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td><img src="/media/back2_01.gif" width="504" height="75"></td>
-<td background="/media/repoffline.gif"><a href="http://server.iad.liveperson.net/hc/23282083/?cmd=file&amp;file=visitorWantsToChat&amp;site=23282083&amp;byhref=1&amp;imageUrl=http://www.serverintellect.com/media" target="chat23282083" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/23282083/?cmd=file&amp;file=visitorWantsToChat&amp;site=23282083&amp;imageUrl=http://www.serverintellect.com/media&amp;referrer='+escape(document.location),'chat23282083','width=472,height=320');return false;"><img src="http://server.iad.liveperson.net/hc/23282083/?cmd=repstate&amp;site=23282083&amp;channel=web&amp;&amp;ver=1&amp;imageUrl=http://www.serverintellect.com/media" name="hcIcon" width="194" height="75" border="0"></a></td>
+<td background="/media/repoffline.gif">	<a href="javascript: var e = window.open('https://livechat.serverintellect.com/SightMaxAgentInterface/PreChatSurvey.aspx?accountID=1&amp;siteID=1&amp;queueID=2',
+				'chatWindow','width=492,height=416,resizable=0,scrollbars=no,menubar=no,status=no');" onmouseout="top.status=''; return true;" onmousedown="top.status='Chat with a company representative';return true;" onmouseover="top.status='Chat with a company representative';return true;">
+			<img border="0" src="http://livechat.serverintellect.com/SightMaxAgentInterface/chat.smgif?accountID=1&amp;siteID=1&amp;queueID=2"></a></td>
 </tr>
 </tbody></table></td>
 <td width="1" bgcolor="#5482FC"><img src="/media/spacer.gif" width="1" height="1"></td>
@@ -46,10 +48,9 @@
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
 </tr>
 <tr bgcolor="#eeeeee">
-<td width="152" background="/media/leftcolumnbg.gif" bgcolor="#eeeeee">&nbsp;</td>
-<td width="646">
+<td width="110" background="/media/leftcolumnbg.gif" bgcolor="#eeeeee">&nbsp;</td>
+<td>
 <div id="qm0" class="qmmc">
-	<a href="http://www.serverintellect.com">Home</a>
 	<a href="/hosting/">Web Hosting</a>
 		<div>
 		<a href="/hosting/basetier.aspx">Base Tier Hosting Plan</a>
@@ -76,7 +77,14 @@
 		<a href="/serverquote/">Server Quote Wizard</a>
 		<a href="https://processing.serverintellect.com/order/serverpurchase.aspx" target="_blank">Online Server Configurator</a>
 		</div>
-	<a href="/about/">About Us</a>
+  <a href="javascript:;">Managed Services</a>
+		<div>
+  		<a href="/mpsm/">Proactive Update Management</a>
+		<a href="/monitoring/">Windows Service Monitoring</a>
+		<a href="/products/ssl/">Secure SSL Certificates</a>
+		<a href="/products/domains/">Domain Names</a>
+	</div>
+<a href="/about/">About Us</a>
 		<div>
 		<a href="/about/">Company Overview</a>
 		<a href="/press/">Press Releases</a>
@@ -95,10 +103,12 @@
 			<div>
 				<a href="/contact/">Contact Us</a>
 				<a href="/comments/">General Feedback</a>
+    <a href="javascript: var e = window.open('https://livechat.serverintellect.com/SightMaxAgentInterface/PreChatSurvey.aspx?accountID=1&amp;siteID=1&amp;queueID=2',
+				'chatWindow','width=492,height=416,resizable=0,scrollbars=no,menubar=no,status=no');" onmouseout="top.status=''; return true;" onmousedown="top.status='Chat with a person';return true;" onmouseover="top.status='Chat with a person';return true;">Live Sales Chat</a>
 			</div>
 <span class="qmclear"></span></div>
 </td>
-<td width="152" height="30" background="/media/rightcolumnbg.gif" bgcolor="#eeeeee">&nbsp;</td>
+<td width="50" height="30" background="/media/rightcolumnbg.gif" bgcolor="#eeeeee">&nbsp;</td>
 </tr>
 <tr bgcolor="#5482FC">
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
@@ -131,13 +141,20 @@
 <td colspan="3"><img src="/media/spacer.gif" alt="spacer" width="1" height="1"></td>
 </tr>
 </tbody></table>
-<table width="150" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td bgcolor="#FFFFFF">&nbsp;</td>
-</tr>
-</tbody></table>
+
 <table width="150" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr bgcolor="#5482FC">
+<tbody><tr>
+<td height="20" align="left" class="header1">&nbsp;&nbsp;In the News </td>
+</tr>
+<tr bgcolor="#5482FC">
+<td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
+</tr>
+<tr>
+<td height="75" align="center" bgcolor="#ffffff" class="basix">
+<a href="/testimonials.aspx">Server Intellect<br> 
+Web Host Magazine Editors Choice Award</a></td>
+</tr>
+<tr bgcolor="#5482FC">
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
 </tr>
 <tr>
@@ -159,6 +176,12 @@
 </tr>
 <tr>
 <td align="left"><a href="/dedicated/">Dedicated Servers</a></td>
+</tr>
+<tr>
+<td align="left"><a href="/products/ssl/">SSL Certificates</a></td>
+</tr>
+<tr>
+<td align="left"><a href="/products/domains/">Domain Names</a></td>
 </tr>
 <tr>
 <td><img src="/media/spacer.gif" width="1" height="2"></td>
@@ -233,7 +256,7 @@
 </tbody></table>
 <table width="150" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td height="20" align="left" class="header1">&nbsp;&nbsp;Satisfaction Guaranteed</td>
+<td height="20" align="left" class="header1">&nbsp;&nbsp;Trusted &amp; Verified</td>
 </tr>
 <tr bgcolor="#5482fc">
 <td colspan="3"><img src="/media/spacer.gif" alt="." width="1" height="1"></td>
@@ -358,24 +381,14 @@ Acceptance of the Master Service Agreement incorporating the <a href="/legal/tos
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
 </tr>
 <tr>
-<td height="20" align="left" class="header1">&nbsp;&nbsp;AJAX Enabled Hosting </td>
+<td height="20" align="left" class="header1">&nbsp;&nbsp;ASP.NET 3.5 UPDATE</td>
 </tr>
 <tr bgcolor="#5482FC">
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
 </tr>
 <tr>
-<td align="center" bgcolor="#ffffff" class="basix"><br>
-<a href="/hosting/features/ajax-hosting.aspx"><img src="/media/ajax-hosting.gif" alt="ASP.NET AJAX Windows Server Hosting Now Available!" width="150" height="115" border="0"></a><br>
-<br>
-<table width="135" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td width="135" class="basix"><div align="center">Order your new ASP.NET web hosting plan today and start using ASP.NET AJAX! </div></td>
-</tr>
-<tr>
-<td height="40" align="center" valign="bottom" class="basix"><a href="http://www.serverintellect.com/web2.0/">Visit the Web 2.0 Development Center</a> </td>
-</tr>
-</tbody></table>
-<br></td>
+<td align="center" bgcolor="#ffffff" class="basix">
+<a href="/hosting/features/asp-net3.5.aspx"><img src="/media/ms_net3.5_small.jpg" alt="ASP.NET 3.5 UPDATE" width="150" height="200" border="0"></a></td>
 </tr>
 <tr bgcolor="#5482FC">
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
@@ -414,7 +427,7 @@ CoDe Magazine</td>
 </tbody></table>
 <table width="150" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td height="20" align="left" class="header1">&nbsp;&nbsp;Trusted &amp; Verified</td>
+<td height="20" align="left" class="header1">&nbsp;&nbsp;Microsoft Gold Partner </td>
 </tr>
 <tr bgcolor="#5482fc">
 <td colspan="3"><img src="/media/spacer.gif" width="1" height="1"></td>
@@ -466,12 +479,12 @@ CoDe Magazine</td>
 <table width="100%" border="0" cellspacing="0" cellpadding="5">
 <tbody><tr>
 <td align="center" class="basix"><br>
-<span class="basixsmgray">Copyright© 2004 Server Intellect | All Rights
-Reserved<br>
-<a href="/hosting/">Microsoft Windows ASP.NET Hosting</a> <img src="/media/blue-bullet.gif" alt="Windows ASP.NET Hosting" width="11" height="11"> <a href="/vps/windowsvps.aspx">Windows
+<span class="basixsmgray">Copyright© 2004 Server Intellect | All Rights Reserved
+<br>
+<a href="/hosting/">ASP.NET Hosting</a> <img src="/media/blue-bullet.gif" alt="Windows ASP.NET Hosting" width="11" height="11"> <a href="/vps/windowsvps.aspx">Windows
 VPS Hosting</a> <img src="/media/blue-bullet.gif" alt="Windows VPS" width="11" height="11"> <a href="/dedicated/">Windows
-Server Hosting </a><img src="/media/blue-bullet.gif" alt="Windows Dedicated Server Hosting" width="11" height="11"><br>
-<a href="/dedicated/windows-dedicated-servers.aspx">Windows Dedicated Servers</a> <img src="/media/blue-bullet.gif" alt="Windows Dedicated Server" width="11" height="11"> <a href="/dedicated/helm-server.aspx">HELM Dedicated Servers</a>  <img src="/media/blue-bullet.gif" alt="HELM Dedicated Servers" width="11" height="11"> <a href="http://www.serverintellect.com/hosting/features/communityserver/">Community
+Dedicated Servers</a><img src="/media/blue-bullet.gif" alt="Windows Dedicated Server Hosting" width="11" height="11"><br>
+<a href="/hosting/windows/">Windows Web Hosting</a> <img src="/media/blue-bullet.gif" width="11" height="11"><a href="/dedicated/helm-server.aspx">HELM Dedicated Servers</a>  <img src="/media/blue-bullet.gif" alt="HELM Dedicated Servers" width="11" height="11"> <a href="http://www.serverintellect.com/hosting/features/communityserver/">Community
 Server Hosting</a> <img src="/media/blue-bullet.gif" alt="Community Server" width="11" height="11"><br>
 <script language="JavaScript">
 var txt = "Bookmark Us";
@@ -491,21 +504,11 @@ txt += "  (Ctrl+D)";
 document.write(txt);
 } 
 </script>Bookmark Us  (Ctrl+D)
-| <a href="/privacy.aspx">Privacy Policy</a> | <a href="/legal/tos.aspx">Terms of Service</a> | <a href="/legal/aup.aspx">Acceptable Use Policy</a> <br>
+ | <a href="/privacy.aspx">Privacy Policy</a> | <a href="/legal/tos.aspx">Terms of Service</a> | <a href="/legal/sla.aspx">Service Level Agreement</a> | <a href="/legal/aup.aspx">Acceptable Use Policy</a> <br>
 </span></td>
 </tr>
 </tbody></table>
-<!-- BEGIN LiveEngage  -->
-<script language="JavaScript1.2">
-if (typeof(lpCV) == "undefined") lpCV = "";
-lpEngageSeconds = 60;   // seconds before chat window opens
-lpNumber = "23282083";                   // Account number 
-lpServerName = "server.iad.liveperson.net";                   // Site server 
-lpCV+="&SESSIONVAR!Call=LiveEngageInvitation";          //  LiveEngage type : Invitation
-</script>
-<script src="http://server.iad.liveperson.net/hcp/html/liveengage1.js "></script>
-<!-- End LiveEngage  -->
-<script language="javascript" src="http://server.iad.liveperson.net/hc/23282083/x.js?cmd=file&amp;file=chatScript3&amp;site=23282083&amp;&amp;category=en;woman;5"> </script>
+<script language="javascript" src="https://livechat.serverintellect.com/SightMaxAgentInterface/Monitor.smjs?accountID=1&amp;siteID=1&amp;queueID=2"></script>
 </td>
 </tr>
 </tbody></table>
