--- a/r/ro/roh/rohm.com.html
+++ b/r/ro/roh/rohm.com.html
@@ -1,200 +1,176 @@
-<!--The following is the downloaded HTML source of the rohm.com privacy policy that was archived on 2007-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070608115654id_/http%3A//www.rohm.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rohm.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228003338id_/http%3A//www.rohm.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="en"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
+
 <title>Privacy Policy | ROHM</title>
-<link rel="stylesheet" href="common/css/basic_style.css" type="text/css">
-<link rel="stylesheet" href="common/css/global.css" type="text/css">
-<script type="text/javascript" src="../common/js/basic_lib.js" charset="iso-8859-1"></script>
+
+<meta name="keywords" content="ROHM">
+
+<meta name="description" content="">
+
+<link rel="shortcut icon" href="cmn/images/favicon.ico">
+<link rel="stylesheet" href="cmn/css/second-import.css" type="text/css">
+<link rel="stylesheet" href="cmn/css/print.css" media="print" type="text/css">
+
+<script type="text/javascript" src="cmn/js/default.js"></script>
+
+<style>
+	#contentArea{
+		text-align:center;
+		margin-right:auto;
+		margin-left:auto;
+	}
+	.privacy_tbl{
+		width:700px;
+	}
+	.privacy_tbl th, .privacy_tbl td{
+		text-align:left;
+		font-size:82%;
+		border:0;
+	}
+	.privacy_tbl th{
+		font-weight:normal;
+		background-color:#EAEAEA;
+		line-height:100%;
+		padding:3px 2px 4px 20px;
+		background-image:url(images/icon_square.gif);
+		background-position:5px 4px;
+		background-repeat:no-repeat;
+	}
+	 .privacy_tbl td{
+	 	line-height:1.4em;
+	 }
+	#s-column{
+		width:960px;
+		margin-left:20px;
+		margin-top:20px;
+	}
+</style>
 </head>
-<body>
-<div id="gheader">
-<table width="800" height="97" border="0" cellpadding="0" cellspacing="0" style="background:url(/common/images/bg_gheadt.gif) no-repeat">
-<tbody><tr>
-<td width="10"><img src="/common/images/spacer.gif" alt="" width="10" height="1"></td>
-<td width="775" valign="top"><table width="775" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td colspan="2"><img src="/common/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-<tr>
-<td width="137" valign="top"><a href="/index.html"><img src="/common/images/co_logo.gif" alt="Excellence in Electronics - ROHM" width="137" height="63" border="0"></a></td>
-<td width="638" align="right" valign="bottom"><table width="638" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td align="right" colspan="2"><table border="0" cellspacing="0" cellpadding="0" class="langt">
-<tbody><tr>
-<td><a href="http://www.rohm.com.cn/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('LN02','','/common/images/langbo_china_kan.gif',1)"><img src="/common/images/langb_china_kan.gif" alt="Simplified Chinese" name="LN02" width="60" height="19" border="0" id="LN02"></a></td>
-<td><a href="http://www.rohm.com.tw/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('LN03','','/common/images/langbo_china_han.gif',1)"><img src="/common/images/langb_china_han.gif" alt="Traditional Chinese" name="LN03" width="60" height="19" border="0" id="LN03"></a></td>
-<td><a href="http://www.rohm.co.kr/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('LN04','','/common/images/langbo_korea.gif',1)"><img src="/common/images/langb_korea.gif" alt="Korean" name="LN04" width="50" height="19" border="0" id="LN04"></a></td>
-<td><a href="http://www.rohm.co.jp/" target="_parent" onmouseover="MM_swapImage('LN01','','/common/images/langbo_japan.gif',1)" onmouseout="MM_swapImgRestore()"><img src="/common/images/langb_japan.gif" alt="Japanese" name="LN01" width="49" height="19" border="0" id="LN01"></a></td>
-</tr>
-</tbody></table></td>
-</tr>
-<tr>
-<td align="right"><table border="0" cellpadding="0" cellspacing="0" bgcolor="#f2f2f2">
-<tbody><tr>
-<td><img src="/common/images/sbox_tl.gif" alt="" width="4" height="4"></td>
-<td background="/common/images/sbox_tc.gif"><img src="/common/images/spacer.gif" alt="" width="1" height="1"></td>
-<td><img src="/common/images/sbox_tr.gif" alt="" width="4" height="4"></td>
-</tr>
-<tr>
-<td background="/common/images/sbox_lc.gif"><img src="/common/images/spacer.gif" alt="" width="1" height="1"></td>
-<td>
-<form name="form1" method="get" action="http://www.rohm.com/cgi-bin/EopenWS_2.cgi">
-<input name="lang" value="e" type="hidden">
-<input name="idxname" value="index-e" type="hidden">
-<table border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td class="Mtxt"><input name="query" type="text" size="15" value="Site Search" class="sserch" onfocus="SiteSearch(this)" onblur="SiteSearch(this)"></td>
-<td><img src="common/images/spacer.gif" alt="" width="5" height="1"></td>
-<td><input name="image" type="image" class="sserchb" src="/common/images/gb_sserch.gif" alt="Seach"></td>
-<td><img src="common/images/spacer.gif" alt="" width="10" height="1"></td>
-<td class="Stxt"><a href="/search.html">Option</a></td>
-<td class="Stxt"><img src="common/images/spacer.gif" alt="" width="5" height="1"></td>
-</tr>
-</tbody></table>
-</form></td>
-<td background="/common/images/sbox_rc.gif"><img src="/common/images/spacer.gif" alt="" width="1" height="1"></td>
-</tr>
-<tr>
-<td><img src="/common/images/sbox_bl.gif" alt="" width="4" height="4"></td>
-<td background="/common/images/sbox_bc.gif"><img src="/common/images/spacer.gif" alt="" width="1" height="1"></td>
-<td><img src="/common/images/sbox_br.gif" alt="" width="4" height="4"></td>
-</tr>
-</tbody></table></td>
-<td width="90" align="right"><a href="/contuctus.html"><img src="/common/images/head_btn_contact.gif" alt="Contact us" width="79" height="26" border="0"></a></td>
-</tr>
-<tr>
-<td><img src="/common/images/spacer.gif" alt="" width="1" height="10"></td>
-</tr>
-</tbody></table></td>
-</tr>
-</tbody></table>
-<table width="775" height="29" border="0" cellpadding="2" cellspacing="0" style="background-image:url(/common/images/bg_gnavi.gif)">
-<tbody><tr>
-<td><table border="0" cellspacing="1" cellpadding="0">
-<tbody><tr>
-<td><a href="/products/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('GN01','','/common/images/gnbo_product.gif',1)"><img src="/common/images/gnb_product.gif" alt="Products" name="GN01" width="127" height="23" border="0" id="GN01"></a></td>
-<td><a href="/corporate/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('GN02','','/common/images/gnbo_company.gif',1)"><img src="/common/images/gnb_company.gif" alt="About Us" name="GN02" width="127" height="23" border="0" id="GN02"></a></td>
-<td><a href="/financial/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('GN03','','/common/images/gnbo_ir.gif',1)"><img src="/common/images/gnb_ir.gif" alt="Investor Relations" name="GN03" width="129" height="23" border="0" id="GN03"></a></td>
-<td><a href="/news/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('GN06','','/common/images/gnbo_news.gif',1)"><img src="/common/images/gnb_news.gif" alt="News" name="GN06" width="127" height="23" border="0" id="GN06"></a></td>
-</tr>
-</tbody></table></td>
-</tr>
-</tbody></table>
-</td>
-<td width="15"><img src="/common/images/spacer.gif" alt="" width="15" height="1"></td>
-</tr>
-</tbody></table>
-<table width="800" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td><img src="/common/images/bg_gheadb.gif" alt="" width="800" height="14"></td>
-</tr>
-</tbody></table>
-</div>
-<div id="TopicPath">
-<span class="Mtxt"><a href="../index-j.html">HOME</a> &gt; Privacy Policy</span></div>
-<div id="mainBox">
-<table width="800" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td valign="top" style="background:url('../images/left_menu_bg.gif') repeat-y;">
+<body onload="radioChange()">
 
 
-<div class="container">
-<img src="images/title_privacy.gif" width="800" height="39" alt="Privacy Policy"><br>
-<br>
-<table width="550" border="0" cellpadding="3" cellspacing="5" class="privacy_tbl" align="center">
+	<div id="header">
+
+			<h1 id="header-logo"><a href="/"><img src="/cmn/images/header-logo.jpg" alt="Excellence in Electronics ROHM" width="137" height="63"></a></h1>
+
+		<ul id="language-list">
+
+			<li><a href="http://www.rohm.com.cn/"><img src="/cmn/images/chinese2-link.jpg" alt="Simplified Chinese" width="64" height="14"></a></li>
+			<li><a href="http://www.rohm.com.tw/"><img src="/cmn/images/chinese1-link.jpg" alt="Traditional Chinese" width="64" height="14"></a></li>
+			<li><a href="http://www.rohm.co.kr/"><img src="/cmn/images/korean-link.jpg" alt="Korean" width="64" height="14"></a></li>
+			<li><a href="http://www.rohm.co.jp/"><img src="/cmn/images/japanese-link.jpg" alt="Japanese" width="64" height="14"></a></li>
+		</ul>
+
+		<div id="search" class="clearfix">
+			<form name="form1" method="get" action="http://www.rohm.com/cgi-bin/EopenWS.cgi" id="s-search" style="display: block;"><!--サイト内検索-->
+				<input type="hidden" name="lang" value="e">
+				<input type="hidden" name="idxname" value="index-e">
+				<input name="query" type="text" size="20" value="Site Search" onfocus="SiteSearch(this)" onblur="SiteSearch(this)" class="mrg-r">
+				<input type="submit" class="sserchb" value="Search">
+			</form>
+			<form name="product_search" method="get" action="http://www.rohm.com/cgi-bin/EopenPS.cgi" id="c-search" style="display: none;"><!--カタログ検索-->
+				<input size="13" name="reslang" value="e" type="hidden">
+				<input name="adminsw" value="off" type="hidden">
+				<input name="queryword" size="20" value="Catalogue Search" type="text" class="mrg-r">
+				<input type="submit" class="sserchb" value="Search">
+			</form>
+			<form name="schange">
+				<input type="radio" name="radio1" value="1" onclick="radioChange()" class="search-select" checked=""><p>Site Search</p>
+				<input type="radio" name="radio1" value="0" onclick="radioChange()" class="search-select"><p>Catalogue Search</p>
+			</form>
+			<p id="ser-op"><a href="http://www.rohm.com/search-e.html">Search Option</a></p>
+		</div>
+
+		<ul id="global-menu">
+			<li id="gmlitop"><a href="/">HOME ,Products</a></li>
+			<li><a href="/products/application/">Application</a></li>
+			<!--<li><a href="#">クロスリファレンス</a></li>-->
+			<li><a href="/ad/index.html">New Products</a></li>
+			<li><a href="http://www.rohm.com/index2.html">Company Profile</a></li>
+			<li><a href="/corporate/support/japan.html">Sales</a></li>
+			<li><a href="https://www.rohm.com/wwwE/contact/">Contact us</a></li>
+			<!--<li><a href="https://direct.rohm.co.jp/jp/NTF0103.asp" target="_blank">MY ROHM</a></li>-->
+		</ul>
+
+		<p id="sitemap"><a href="http://www.rohm.com/sitemap/">Site Map</a></p>
+
+
+		<ul id="topic-path">
+			<li><a href="index.html">HOME</a> &gt;</li>
+			<li>Privacy Policy</li>
+		</ul>
+
+	</div><!--header end-->
+
+
+	<div id="s-column"><!--contents-->
+
+	<h2 class="cnt2-h2">Privacy Policy</h2>
+
+	<div id="contentArea"><!--center align-->
+
+<table border="0" cellpadding="3" cellspacing="5" class="privacy_tbl">
 	<tbody><tr>
 		<td>With regard to matters concerning the registered customer's personal information and privacy (hereinafter referred to as "Personal Information"), ROHM (hereinafter referred to as the "Company") acknowledges the primary purpose of collecting and using personal information based upon the "Law Dealing with Personal Information" and the "Guidelines for the Economic and Industrial Sectors Concerning the Law Dealing with Personal Information." ROHM will acquire any Personal Information fairly, and implement the following measures in order to administer this information safely and accurately:<br><br></td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Gathering Personal Information</th>
+		<th>Gathering Personal Information</th>
 	</tr>
 	<tr>
 		<td>When obtaining a customer's Personal Information, the Company will inform and disclose the purpose to the customer in advance, and acquire Personal Information only to a degree that is deemed appropriate.</td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Use of Personal Information</th>
+		<th>Use of Personal Information</th>
 	</tr>
 	<tr>
 		<td>Excluding such cases where there is justifiable reason such as a legal obligation, the Company will not use the customer's Personal Information for any other purpose besides that indicated to the customer. However, in some cases the Company may use Personal Information without identifying the individual customer to collect statistical data such as the number of customers, the volume of sales, the method of using the website, and so on.</td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Offering Personal Information to Third Parties</th>
+		<th>Offering Personal Information to Third Parties</th>
 	</tr>
 	<tr>
 		<td>Excluding such cases where there is justifiable reason such as a legal obligation, the Company will not offer the customer's Personal Information to a third party without prior agreement of the customer.</td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Managing the Personal Information</th>
+		<th>Managing the Personal Information</th>
 	</tr>
 	<tr>
 		<td>The Company shall manage Personal Information appropriately and fairly as stated above.</td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Training and Education of Employees Regarding Personal Information</th>
+		<th>Training and Education of Employees Regarding Personal Information</th>
 	</tr>
 	<tr>
 		<td>The Company shall implement the necessary training and education so that employees of the Company understand the importance of the Personal Information and handle it appropriately.</td>
 	</tr>
 	<tr>
-		<th><img src="images/icon_square.gif" width="10" height="10" align="absmiddle"> Disclosure, Correction and Deletion of Personal Information</th>
+		<th>Disclosure, Correction and Deletion of Personal Information</th>
 	</tr>
 	<tr>
 		<td>
 			With regard to the customer's Personal Information managed by the Company, if a request is received from the customer for disclosure of their own Personal Information, or if a request is received from the customer for the correction or deletion of their own Personal Information due to any mistake in its content or other such reasons, the Company shall act accordingly after confirmation of customer's identity in order to prevent disclosing the customer's Personal Information.<br>
 			<br>
-			For inquiries or more information, please use the <a href="https://www.rohm.com/wwwE/contact/map.html">Inquiry Form.</a><br>
+			For inquiries or more information, please use the <a href="https://www.rohm.com/wwwE/contact/">Inquiry Form.</a><br>
 		</td>
 	</tr>
 </tbody></table>
+	</div><!--cnter align end-->
 
-</div><!-- container end -->
+	</div>
 
+		<div id="footer">
+		<p id="page-top-link"><a href="#top">Top of Page</a></p>
 
+		<p id="p-policy"><a href="/privacy.html">Privacy Policy</a></p>
+		<p id="copy-r">Copyright © 1997-2007 ROHM CO.,LTD.</p>
+	</div><!--footer end-->
 
-
-</td>
-</tr>
-</tbody></table>
-</div>
-
-<table width="800" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr bgcolor="#FFFFFF">
-<td width="800"><img src="/common/images/spacer.gif" alt="" width="1" height="10"></td>
-</tr>
-<tr>
-<td><img src="/common/images/spacer.gif" alt="" width="1" height="6"><img src="/common/images/gf_captop.gif" alt="" width="800" height="6"></td>
-</tr>
-<tr>
-<td valign="top"><table width="800" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td width="10" valign="top"><img src="/common/images/spacer.gif" alt="" width="10" height="1"></td>
-<td width="699"><table border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td class="Stxt"><img src="/common/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-<tr>
-<td class="Stxt"><a href="/privacy.html">Privacy Policy</a></td>
-</tr>
-<tr>
-<td><img src="/common/images/spacer.gif" alt="" width="1" height="5"></td>
-</tr>
-<tr>
-<td class="Stxt"><span class="copyright">Copyright © 1997-2007 ROHM CO.,LTD.</span></td>
-</tr>
-</tbody></table></td>
-<td width="85" align="right" valign="top"><a href="#top" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('FN01','','/common/images/gfno_ptop.gif',1)"><img src="/common/images/gfn_ptop.gif" alt="" name="FN01" width="85" height="17" border="0" id="FN01"></a></td>
-<td width="6" valign="top"><img src="/common/images/spacer.gif" alt="" width="6" height="1"></td>
-</tr>
-</tbody></table></td>
-</tr>
-<tr>
-<td valign="top"><img src="/common/images/spacer.gif" alt="" width="1" height="20"></td>
-</tr>
-</tbody></table>
 
 
 </body></html>
